plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

group 'gg.discord.tj'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

jar {
    manifest {
        attributes 'Main-Class': 'gg.discord.tj.bot.app.Application'
    }
}

shadowJar {
    archiveName tasks.jar.archiveName
    classifier ''
    duplicatesStrategy DuplicatesStrategy.EXCLUDE
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'

    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    implementation 'com.discord4j:discord4j-core:3.1.7'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.1'
    implementation 'com.google.googlejavaformat:google-java-format:1.10.0'
    implementation 'com.github.freva:ascii-table:1.2.0'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
}

test {
    useJUnitPlatform()
}